--- a/main/requirements.txt
+++ b/main/requirements.txt
@@ -10,3 +10,11 @@ geocoder==1.38.1
 openpyxl==3.1.2
 leafmap
 streamlit_js_eval
+#------------------------
+pandas==1.3.2
+streamlit==1.4.0
+folium==0.12.1.post1
+requests==2.24.0
+Pillow==7.2.0
+streamlit_folium
+streamlit_option_menu
